url-shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-service
spec:
  selector:
    app: url-shortener
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer # Use NodePort if LoadBalancer is not supported
